--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dragula": "3.7.2",
     "intl": "^1.2.5",
     "ng-sidebar": "6.0.2",
+    "ng2-charts": "^1.6.0",
     "ng2-dragula": "1.5.0",
     "ng2-file-upload": "1.2.1",
     "ng2-validation": "4.2.0",
